--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -71,7 +71,7 @@ jobs:
       run: |
         
         gcloud container clusters get-credentials my-first-cluster-1 --zone us-west1-a --project reflected-flame-283905
-        ./kustomize edit set image $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:${GITHUB_SHA}
+        ./kustomize edit set image sridharpulangari/go-calc:0.0.1
         ./kustomize build . | kubectl apply -f -
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
